lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:24: error: not found: value setAngleDesiree
  			setAngleDesiree(-45)
                        ^Lander:26: error: not found: value setAngleDesiree
  			setAngleDesiree(45)
                        ^